feat(musicplayer): Write music player page UI

--- a/features/core/src/main/res/values/dimens.xml
+++ b/features/core/src/main/res/values/dimens.xml
@@ -116,4 +116,8 @@
     <dimen name="elevation_default">2dp</dimen>
     <dimen name="elevation_bolder">4dp</dimen>
 
+    <!-- Components -->
+    <dimen name="image_album_size_small">44dp</dimen>
+    <dimen name="image_album_size_medium">66dp</dimen>
+
 </resources>
