--- a/features/core/src/main/res/values/styles_components.xml
+++ b/features/core/src/main/res/values/styles_components.xml
@@ -509,5 +509,8 @@
     </style>
     <!-- endregion -->
 
+    <style name="ShapeAppearanceOverlay.App.CornerAlbumSmall" parent="">
+        <item name="cornerSize">20%</item>
+    </style>
     <!-- endregion -->
 </resources>
