--- a/features/core/src/main/res/values/colors.xml
+++ b/features/core/src/main/res/values/colors.xml
@@ -79,7 +79,7 @@
     <color name="bg_progress_bar_status_text_blue">#D0077CB6</color>
 
     <color name="bg_pressed_shadow">#60565456</color>
-    <color name="bg_home_header">#D0606AEC</color>
+    <color name="bg_page_header">@color/purple_100</color>
 
     <!--region TEXT COLORS-->
     <color name="text_color_default">@color/ds_black</color>
@@ -89,6 +89,7 @@
     <color name="text_color_subdued">@color/grey_600</color>
     <color name="text_color_label">@color/grey_500</color>
     <color name="text_color_disabled">@color/grey_400</color>
+    <color name="text_color_hint">@color/grey_300</color>
     <color name="text_color_hint_disabled">@color/grey_200</color>
     <color name="text_color_brand_primary">@color/blue_600</color>
     <color name="text_color_brand_primary_bolder">@color/blue_700</color>
