--- a/features/musicplayer/src/main/res/layout/fragment_home.xml
+++ b/features/musicplayer/src/main/res/layout/fragment_home.xml
@@ -1,26 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:background="@color/bg_default">
 
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="?actionBarSize"
-        android:background="@color/bg_home_header"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+  <FrameLayout
+    android:id="@+id/home_header"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            style="@style/Typography.Blu.Paragraph.Large.Bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:includeFontPadding="false"
-            android:textColor="@color/text_color_inverted"
-            android:text="Search Here" />
+    <include
+      android:id="@+id/search_header"
+      layout="@layout/layout_search_header" />
 
-    </FrameLayout>
+  </FrameLayout>
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/rv_content"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:clipToPadding="false"
+    android:paddingTop="?actionBarSize"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:listitem="@layout/layout_item_song" />
+
+  <FrameLayout
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:background="@color/bg_default"
+    tools:background="@color/bg_level1"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent">
+
+    <include
+      android:id="@+id/control_deck"
+      layout="@layout/layout_control_deck" />
+
+  </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
