--- a/features/musicplayer/src/main/res/layout/layout_item_song.xml
+++ b/features/musicplayer/src/main/res/layout/layout_item_song.xml
@@ -3,6 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/button_action"
   android:layout_width="match_parent"
   android:layout_height="wrap_content">
 
@@ -10,10 +11,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/margin_xlarge"
-    android:layout_marginBottom="@dimen/margin_small"
-    android:background="@drawable/bg_item_outlined_r_med">
+    android:layout_marginBottom="@dimen/margin_small">
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <com.kevinputro.core.components.CoilImageView
       android:id="@+id/iv_album"
       android:layout_width="@dimen/image_album_size_medium"
       android:layout_height="@dimen/image_album_size_medium"
