--- a/features/musicplayer/src/main/res/layout/layout_search_header.xml
+++ b/features/musicplayer/src/main/res/layout/layout_search_header.xml
@@ -4,7 +4,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="?actionBarSize"
-  android:background="@drawable/bg_page_header">
+  android:background="@color/bg_blur_page_header">
 
   <FrameLayout
     android:layout_width="0dp"
