feat(musicplayer): Add api call logic

--- a/features/musicplayer/src/main/res/layout/layout_search_header.xml
+++ b/features/musicplayer/src/main/res/layout/layout_search_header.xml
@@ -16,7 +16,7 @@
     app:layout_constraintTop_toTopOf="parent">
 
     <include
-      android:id="@+id/view_search"
+      android:id="@+id/layout_search"
       layout="@layout/view_search" />
 
   </FrameLayout>
