--- a/features/core/src/main/res/values/colors.xml
+++ b/features/core/src/main/res/values/colors.xml
@@ -90,10 +90,10 @@
     <color name="text_color_disabled">@color/grey_400</color>
     <color name="text_color_hint">@color/grey_300</color>
     <color name="text_color_hint_disabled">@color/grey_200</color>
-    <color name="text_color_brand_primary">@color/blue_600</color>
-    <color name="text_color_brand_primary_bolder">@color/blue_700</color>
-    <color name="text_color_brand_secondary">@color/orange_600</color>
-    <color name="text_color_brand_secondary_bolder">@color/orange_700</color>
+    <color name="text_color_brand_primary">@color/purple_400</color>
+    <color name="text_color_brand_primary_bolder">@color/purple_600</color>
+    <color name="text_color_brand_secondary">@color/blue_600</color>
+    <color name="text_color_brand_secondary_bolder">@color/blue_700</color>
     <color name="text_color_critical">@color/red_600</color>
     <color name="text_color_critical_bolder">@color/red_700</color>
     <color name="text_color_warning">@color/yellow_600</color>
@@ -129,7 +129,7 @@
     <color name="bg_inverted">@color/ds_black</color>
 
     <color name="bg_blur_page_header">#A0DCDFFC</color>
-    <color name="bg_blur_control_deck">#A0ECEDFE</color>
+    <color name="bg_blur_control_deck">#E2DCDFFC</color>
 
     <color name="bg_primary">@color/blue_600</color>
     <color name="bg_secondary">@color/blue_400</color>
