--- a/features/core/src/main/res/values/styles.xml
+++ b/features/core/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppTheme.Base" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
@@ -13,6 +13,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/bg_blur_page_header</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:navigationBarColor">@color/bg_blur_control_deck</item>
+        <item name="android:windowLightNavigationBar"
+          tools:targetApi="o_mr1">true</item>
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@android:color/white</item>
 
