--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,76 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="200"
+    android:viewportHeight="200">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M73.58,110.78C73.58,125.5 85.51,137.42 100.22,137.42C114.93,137.42 126.86,125.5 126.86,110.78"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M126.86,89.66C126.86,74.95 114.93,63.02 100.22,63.02C85.51,63.02 73.58,74.95 73.58,89.66"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M88.85,126.53C99.25,136.93 116.12,136.93 126.53,126.53C136.93,116.12 136.93,99.25 126.53,88.85"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M111.59,73.92C101.19,63.51 84.32,63.51 73.92,73.92C63.51,84.32 63.51,101.19 73.92,111.59"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M110.78,126.86C125.49,126.86 137.42,114.93 137.42,100.22C137.42,85.51 125.49,73.58 110.78,73.58"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M89.66,73.58C74.95,73.58 63.02,85.51 63.02,100.22C63.02,114.93 74.95,126.86 89.66,126.86"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M126.53,111.59C136.93,101.19 136.93,84.32 126.53,73.92C116.12,63.51 99.25,63.51 88.85,73.92"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillAlpha="0.66"
+        android:fillColor="#00000000"
+        android:pathData="M73.92,88.85C63.51,99.25 63.51,116.12 73.92,126.53C84.32,136.93 101.19,136.93 111.59,126.53"
+        android:strokeWidth="21.12"
+        android:strokeAlpha="0.66"
+        android:strokeColor="#4756F0"
+        android:strokeLineCap="round" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M100.2,115.56V84.84M94.68,105.88L105.88,94.68M94.68,94.68L105.88,105.88"
+        android:strokeWidth="3"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round" />
 </vector>
