--- a/features/musicplayer/src/main/res/layout/fragment_home.xml
+++ b/features/musicplayer/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
     android:layout_height="0dp"
     android:clipToPadding="false"
     android:paddingTop="?actionBarSize"
+    android:paddingBottom="@dimen/image_size_200"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
