fix(musicplayer): improve welcome card ui

--- a/features/core/src/main/res/values/styles_components.xml
+++ b/features/core/src/main/res/values/styles_components.xml
@@ -514,7 +514,7 @@
     </style>
 
     <style name="ShapeAppearanceOverlay.App.Welcome" parent="">
-        <item name="cornerSize">@dimen/radius_medium</item>
+        <item name="cornerSize">@dimen/radius_xxlarge</item>
     </style>
 
     <style name="TrackSeekBar" parent="Widget.AppCompat.SeekBar">
